[package]
name = "android_native_window"
version = "0.1.0"
edition = "2021"

# 可选的描述和许可证字段
description = "Android Native Window ffi ,supported to Android14."
license = "MIT"

# 其他字段...
authors = ["aattooee <aattooee@github.com>"]
repository = "https://github.com/aattooee/android_native_window"

[dependencies]
evdev = "0.12.0"
raw-window-handle = "0.6.2"
imgui = "0.12.0"

