[package]
name = "android_native_window"
version = "0.3.0"
edition = "2021"

description = "Android Native Window ffi ,supported to Android15."
license = "MIT"

authors = ["aattooee <aattooee@github.com>"]
repository = "https://github.com/aattooee/android_native_window"

[dependencies]
evdev = "0.12.0"
raw-window-handle = "0.6.2"
imgui = "0.12.0"

